--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: Georgia;
 }
 
 body {
@@ -10,59 +10,53 @@ body {
 }
 
 .container {
-    margin: 0px 50px;
-}
-
-h1 {
-    font-size: 2.3rem;
+    margin: 25px 75px;
 }
 
 nav {
     width: 100%;
+    height: 55px;
+    padding: 5px 100px;
     background-color: darkred;
-    padding: 5px 60px;
-    height: 45px;
 }
 
 nav ul {
     margin: 0;
     padding: 0;
-    list-style-type: none;
     display: flex;
     justify-content: space-between;
+    list-style-type: none;
 }
 
 nav ul li {
     color: white;
-    font-size: 30px;
+    font-size: 40px;
+    cursor: pointer;
+}
+nav ul li:hover {
+    color: yellow;
 }
 
 main img {
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     display: inline-block;
-    margin-right: 15px;
+    margin-right: 30px;
+}
+
+img {
+    object-fit: contain;
 }
 
 main {
-    display: flex;
     margin: 15px 0;
+    display: flex;
 }
 
 main p {
     margin: 0;
     font-weight: 500;
 }
-
-section h2 {
-    font-size: 2em;
-}
-
-footer {
-    border-top: 1px solid white;
-    margin-top: 25px;
-}
-
 
 .sections {
     display: flex;
@@ -80,37 +74,44 @@ form fieldset {
     flex-direction: column;
 }
 
+label[for='contact'] {
+    margin-top: 15px;
+}
 
 fieldset input, fieldset textarea {
     font-size: 20px;
     height: 50px;
     display: block;
-    font-weight: 600;
-    border-radius: 5px;
-    padding: 10px 5px;
-    border: 1px solid red;
-}
-
-label[for='q'], label[for='contact'] {
-    margin-top: 10px;
-}
-
-#q {
-    height: 100px ;
-    resize: none;
+    font-weight: 200;
+    border-radius: 15px;
+    padding: 10px 15px;
 }
 
 fieldset button {
-    cursor: pointer;
-
+    margin-top: 10px;
     width: 100px;
     height: 40px;
-
-    border: none;
-    border-radius: 5px;
+    cursor: pointer;
+    border-radius: 25px;
     background-color: red;
     color:white;
     font-size: 20px;
-    font-weight: 600;
-    margin-top: 10px;
+}
+fieldset button:hover {
+    background-color: darkred;
+    color: white;
+    font-weight: bold;
+}
+
+footer {
+    margin-top: 25px;
+    border-top: 1px solid white;
+    color: whitesmoke
+}
+
+a {
+    color: yellow;
+  }
+a:hover{
+    color: goldenrod;
 }
