--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body {
 
 .container {
     margin: 25px 75px;
+    margin-top: 75px;
 }
 
 nav {
@@ -18,6 +19,11 @@ nav {
     height: 55px;
     padding: 5px 100px;
     background-color: darkred;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
 }
 
 nav ul {
